--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<h1>This is a Popup Window</h1>
 	</div>
 	<div class="details-modal-content">
-	<p>Click outside the form close this modal.</p>
+	<p>Click outside the form to close this modal.</p>
 	</div>
 	</div>
 	</details>
