--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </body>
         </html>
 	
-    <p>Nesting a modal inside a details element it is automatically shown when the details is opened. And by nesting the overlay inside the summary element, we can use that to trigger a close or click the x button.</p>
+    <p>Nesting a modal inside a details element it is automatically shown when the details is opened. And by nesting the overlay inside the summary element, we can use that to trigger a close or click the <strong> X </strong> button.</p>
 	
 	<details>
 	 <summary>
