--- a/index.html
+++ b/index.html
@@ -44,4 +44,4 @@
 	
  </html>
 
-	<!-- coded with ♡ by accolades.dev aka Luc -->
+	<!-- coded with ♡ by accolades.dev aka Luc. Find my portfolio here: https://accolades.dev -->
